Get rid USER_VARIABLE macro and add HOST_* variables

--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -6,17 +6,11 @@ MAKEFLAGS += -rR
 # Change as needed.
 override OUTPUT := kernel
 
-# Convenience macro to reliably declare user overridable variables.
-override USER_VARIABLE = $(if $(filter $(origin $(1)),default undefined),$(eval override $(1) := $(2)))
-
 # Target architecture to build for. Default to x86_64.
-$(call USER_VARIABLE,ARCH,x86_64)
-
-# Destination directory on install (should always be empty by default).
-$(call USER_VARIABLE,DESTDIR,)
+ARCH := x86_64
 
 # Install prefix; /usr/local is a good, standard default pick.
-$(call USER_VARIABLE,PREFIX,/usr/local)
+PREFIX := /usr/local
 
 # Check if the architecture is supported.
 ifeq ($(filter $(ARCH),aarch64 loongarch64 riscv64 x86_64),)
@@ -24,27 +18,27 @@ ifeq ($(filter $(ARCH),aarch64 loongarch64 riscv64 x86_64),)
 endif
 
 # User controllable C compiler command.
-$(call USER_VARIABLE,CC,cc)
+CC := cc
 
 # User controllable archiver command.
-$(call USER_VARIABLE,AR,ar)
+AR := ar
 
 # User controllable linker command.
-$(call USER_VARIABLE,LD,ld)
+LD := ld
 
 # User controllable C flags.
-$(call USER_VARIABLE,CFLAGS,-g -O2 -pipe)
+CFLAGS := -g -O2 -pipe
 
 # User controllable C preprocessor flags. We set none by default.
-$(call USER_VARIABLE,CPPFLAGS,)
+CPPFLAGS :=
 
 ifeq ($(ARCH),x86_64)
     # User controllable nasm flags.
-    $(call USER_VARIABLE,NASMFLAGS,-F dwarf -g)
+    NASMFLAGS := -F dwarf -g
 endif
 
 # User controllable linker flags. We set none by default.
-$(call USER_VARIABLE,LDFLAGS,)
+LDFLAGS :=
 
 # Ensure the dependencies have been obtained.
 ifneq ($(shell ( test '$(MAKECMDGOALS)' = clean || test '$(MAKECMDGOALS)' = distclean ); echo $$?),0)
