Update limine.h and use API rev 1

--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -69,6 +69,7 @@ override CPPFLAGS := \
     -I src \
     -isystem freestnd-c-hdrs-0bsd \
     $(CPPFLAGS) \
+    -DLIMINE_API_REVISION=1 \
     -MMD \
     -MP
 
@@ -164,7 +165,7 @@ override HEADER_DEPS := $(addprefix obj-$(ARCH)/,$(CFILES:.c=.c.d) $(ASFILES:.S=
 all: bin-$(ARCH)/$(OUTPUT)
 
 # Link rules for building the C compiler runtime.
-cc-runtime-$(ARCH)/cc-runtime.a: cc-runtime/*
+cc-runtime-$(ARCH)/cc-runtime.a: GNUmakefile cc-runtime/*
 	rm -rf cc-runtime-$(ARCH)
 	cp -r cc-runtime cc-runtime-$(ARCH)
 	$(MAKE) -C cc-runtime-$(ARCH) -f cc-runtime.mk \
