Link using the compiler driver

--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -23,9 +23,6 @@ CC := cc
 # User controllable archiver command.
 AR := ar
 
-# User controllable linker command.
-LD := ld
-
 # User controllable C flags.
 CFLAGS := -g -O2 -pipe
 
@@ -59,7 +56,6 @@ override CFLAGS += \
     -ffreestanding \
     -fno-stack-protector \
     -fno-stack-check \
-    -fno-lto \
     -fno-PIC \
     -ffunction-sections \
     -fdata-sections
@@ -95,7 +91,7 @@ ifeq ($(ARCH),x86_64)
         -mno-red-zone \
         -mcmodel=kernel
     override LDFLAGS += \
-        -m elf_x86_64
+        -Wl,-m,elf_x86_64
     override NASMFLAGS += \
         -f elf64
 endif
@@ -107,7 +103,7 @@ ifeq ($(ARCH),aarch64)
     override CFLAGS += \
         -mgeneral-regs-only
     override LDFLAGS += \
-        -m aarch64elf
+        -Wl,-m,aarch64elf
 endif
 ifeq ($(ARCH),riscv64)
     ifeq ($(CC_IS_CLANG),1)
@@ -123,8 +119,8 @@ ifeq ($(ARCH),riscv64)
         -mabi=lp64 \
         -mno-relax
     override LDFLAGS += \
-        -m elf64lriscv \
-        --no-relax
+        -Wl,-m,elf64lriscv \
+        -Wl,--no-relax
 endif
 ifeq ($(ARCH),loongarch64)
     ifeq ($(CC_IS_CLANG),1)
@@ -135,16 +131,17 @@ ifeq ($(ARCH),loongarch64)
         -march=loongarch64 \
         -mabi=lp64s
     override LDFLAGS += \
-        -m elf64loongarch \
-        --no-relax
+        -Wl,-m,elf64loongarch \
+        -Wl,--no-relax
 endif
 
 # Internal linker flags that should not be changed by the user.
 override LDFLAGS += \
+    -Wl,--build-id=none \
     -nostdlib \
     -static \
     -z max-page-size=0x1000 \
-    -gc-sections \
+    -Wl,--gc-sections \
     -T linker-$(ARCH).ld
 
 # Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
@@ -181,7 +178,7 @@ cc-runtime-$(ARCH)/cc-runtime.a: GNUmakefile cc-runtime/*
 # Link rules for the final executable.
 bin-$(ARCH)/$(OUTPUT): GNUmakefile linker-$(ARCH).ld $(OBJ) cc-runtime-$(ARCH)/cc-runtime.a
 	mkdir -p "$$(dirname $@)"
-	$(LD) $(OBJ) cc-runtime-$(ARCH)/cc-runtime.a $(LDFLAGS) -o $@
+	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ) cc-runtime-$(ARCH)/cc-runtime.a -o $@
 
 # Compilation rules for *.c files.
 obj-$(ARCH)/%.c.o: src/%.c GNUmakefile
