--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -20,6 +20,9 @@ endif
 # User controllable C compiler command.
 CC := cc
 
+# User controllable linker command.
+LD := ld
+
 # User controllable C flags.
 CFLAGS := -g -O2 -pipe
 
@@ -53,6 +56,7 @@ override CFLAGS += \
     -ffreestanding \
     -fno-stack-protector \
     -fno-stack-check \
+    -fno-lto \
     -fno-PIC \
     -ffunction-sections \
     -fdata-sections
@@ -88,7 +92,7 @@ ifeq ($(ARCH),x86_64)
         -mno-red-zone \
         -mcmodel=kernel
     override LDFLAGS += \
-        -Wl,-m,elf_x86_64
+        -m elf_x86_64
     override NASMFLAGS += \
         -f elf64
 endif
@@ -100,7 +104,7 @@ ifeq ($(ARCH),aarch64)
     override CFLAGS += \
         -mgeneral-regs-only
     override LDFLAGS += \
-        -Wl,-m,aarch64elf
+        -m aarch64elf
 endif
 ifeq ($(ARCH),riscv64)
     ifeq ($(CC_IS_CLANG),1)
@@ -116,8 +120,8 @@ ifeq ($(ARCH),riscv64)
         -mabi=lp64 \
         -mno-relax
     override LDFLAGS += \
-        -Wl,-m,elf64lriscv \
-        -Wl,--no-relax
+        -m elf64lriscv \
+        --no-relax
 endif
 ifeq ($(ARCH),loongarch64)
     ifeq ($(CC_IS_CLANG),1)
@@ -128,17 +132,16 @@ ifeq ($(ARCH),loongarch64)
         -march=loongarch64 \
         -mabi=lp64s
     override LDFLAGS += \
-        -Wl,-m,elf64loongarch \
-        -Wl,--no-relax
+        -m elf64loongarch \
+        --no-relax
 endif
 
 # Internal linker flags that should not be changed by the user.
 override LDFLAGS += \
-    -Wl,--build-id=none \
     -nostdlib \
     -static \
     -z max-page-size=0x1000 \
-    -Wl,--gc-sections \
+    -gc-sections \
     -T linker-$(ARCH).ld
 
 # Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
@@ -165,7 +168,7 @@ all: bin-$(ARCH)/$(OUTPUT)
 # Link rules for the final executable.
 bin-$(ARCH)/$(OUTPUT): GNUmakefile linker-$(ARCH).ld $(OBJ)
 	mkdir -p "$$(dirname $@)"
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ) -o $@
+	$(LD) $(OBJ) $(LDFLAGS) -o $@
 
 # Compilation rules for *.c files.
 obj-$(ARCH)/%.c.o: %.c GNUmakefile
