--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -64,7 +64,7 @@ ifneq ($(shell ( test '$(MAKECMDGOALS)' = clean || test '$(MAKECMDGOALS)' = dist
 endif
 
 # Check if CC is Clang.
-override CC_IS_CLANG := $(shell ! $(CC) --version 2>/dev/null | grep 'clang' >/dev/null 2>&1; echo $$?)
+override CC_IS_CLANG := $(shell ! $(CC) --version 2>/dev/null | grep '^Target:' >/dev/null 2>&1; echo $$?)
 
 # Internal C flags that should not be changed by the user.
 override CFLAGS += \
