--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -33,6 +33,15 @@ else
     CC := cc
 endif
 
+# User controllable linker command.
+LD := $(TOOLCHAIN_PREFIX)ld
+
+# Defaults overrides for variables if using "llvm" as toolchain.
+ifeq ($(TOOLCHAIN),llvm)
+    CC := clang
+    LD := ld.lld
+endif
+
 # User controllable C flags.
 CFLAGS := -g -O2 -pipe
 
@@ -46,12 +55,6 @@ endif
 
 # User controllable linker flags. We set none by default.
 LDFLAGS :=
-
-# Defaults overrides for variables if using "llvm" as toolchain.
-ifeq ($(TOOLCHAIN),llvm)
-    CC := clang
-    override LDFLAGS := -fuse-ld=lld $(LDFLAGS)
-endif
 
 # Ensure the dependencies have been obtained.
 ifneq ($(shell ( test '$(MAKECMDGOALS)' = clean || test '$(MAKECMDGOALS)' = distclean ); echo $$?),0)
@@ -108,7 +111,7 @@ ifeq ($(ARCH),x86_64)
         -mno-red-zone \
         -mcmodel=kernel
     override LDFLAGS += \
-        -Wl,-m,elf_x86_64
+        -m elf_x86_64
     override NASMFLAGS := \
         -f elf64 \
         $(NASMFLAGS)
@@ -121,7 +124,7 @@ ifeq ($(ARCH),aarch64)
     override CFLAGS += \
         -mgeneral-regs-only
     override LDFLAGS += \
-        -Wl,-m,aarch64elf
+        -m aarch64elf
 endif
 ifeq ($(ARCH),riscv64)
     ifeq ($(CC_IS_CLANG),1)
@@ -137,8 +140,8 @@ ifeq ($(ARCH),riscv64)
         -mabi=lp64 \
         -mno-relax
     override LDFLAGS += \
-        -Wl,-m,elf64lriscv \
-        -Wl,--no-relax
+        -m elf64lriscv \
+        --no-relax
 endif
 ifeq ($(ARCH),loongarch64)
     ifeq ($(CC_IS_CLANG),1)
@@ -149,18 +152,17 @@ ifeq ($(ARCH),loongarch64)
         -march=loongarch64 \
         -mabi=lp64s
     override LDFLAGS += \
-        -Wl,-m,elf64loongarch \
-        -Wl,--no-relax
+        -m elf64loongarch \
+        --no-relax
 endif
 
 # Internal linker flags that should not be changed by the user.
 override LDFLAGS += \
-    -static \
     -nostdlib \
-    -Wl,-nostdlib \
-    -Wl,-z,max-page-size=0x1000 \
-    -Wl,--gc-sections \
-    -Wl,-T,linker-scripts/$(ARCH).lds
+    -static \
+    -z max-page-size=0x1000 \
+    --gc-sections \
+    -T linker-scripts/$(ARCH).lds
 
 # Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
 # object and header dependency file names.
@@ -186,7 +188,7 @@ all: bin-$(ARCH)/$(OUTPUT)
 # Link rules for the final executable.
 bin-$(ARCH)/$(OUTPUT): GNUmakefile linker-scripts/$(ARCH).lds $(OBJ)
 	mkdir -p "$$(dirname $@)"
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ) -o $@
+	$(LD) $(OBJ) $(LDFLAGS) -o $@
 
 # Compilation rules for *.c files.
 obj-$(ARCH)/%.c.o: %.c GNUmakefile
