--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -104,6 +104,7 @@ ifeq ($(ARCH),x86_64)
     override CFLAGS += \
         -m64 \
         -march=x86-64 \
+        -mabi=sysv \
         -mno-80387 \
         -mno-mmx \
         -mno-sse \
@@ -122,6 +123,8 @@ ifeq ($(ARCH),aarch64)
             -target aarch64-unknown-none-elf
     endif
     override CFLAGS += \
+        -mcpu=generic \
+        -march=armv8-a+nofp+nosimd \
         -mgeneral-regs-only
     override LDFLAGS += \
         -m aarch64elf
@@ -150,7 +153,10 @@ ifeq ($(ARCH),loongarch64)
     endif
     override CFLAGS += \
         -march=loongarch64 \
-        -mabi=lp64s
+        -mabi=lp64s \
+        -mfpu=none \
+        -msimd=none \
+        -mno-relax
     override LDFLAGS += \
         -m elf64loongarch \
         --no-relax
