--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -49,7 +49,7 @@ CPPFLAGS :=
 
 ifeq ($(ARCH),x86_64)
     # User controllable nasm flags.
-    NASMFLAGS := -F dwarf -g
+    NASMFLAGS := -g
 endif
 
 # User controllable linker flags. We set none by default.
@@ -91,7 +91,8 @@ override CPPFLAGS := \
 
 ifeq ($(ARCH),x86_64)
     # Internal nasm flags that should not be changed by the user.
-    override NASMFLAGS += \
+    override NASMFLAGS := \
+        $(patsubst -g,-g -F dwarf,$(NASMFLAGS)) \
         -Wall
 endif
 
